fix: fix bugs in manifesto page

--- a/admin/admin_dashboard.html
+++ b/admin/admin_dashboard.html
@@ -12,7 +12,6 @@
 
 <body>
 
-
     <!-- Dashboard -->
     <div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary" id="nave_side">
         <!-- Vertical Navbar -->
@@ -31,7 +30,7 @@
                             <!-- Actions -->
                             <div class="col-sm-6 col-12 text-sm-end">
                                 <div class="mx-n1">
-                                    <a href="pages/leader_portfoie/politicin_create.html?name=none"
+                                    <a href="pages/leader_portfoie/create_leaders/politicin_create.html"
                                         class="btn d-inline-flex btn-sm btn-primary mx-1" id="direct_to_create">
                                         <span class=" pe-2">
                                             <i class="bi bi-plus"></i>
@@ -89,9 +88,7 @@
         </div>
     </div>
 
-    <script>
-
-        // // Create the table row element
+    <script>        // // Create the table row element
         // const tr = document.createElement('tr');
 
         // // Create the first table data element for the avatar and name
@@ -164,8 +161,6 @@
         // // Add the row element to the table body
         // const tableBody = document.querySelector('tbody');
         // tableBody.appendChild(tr);
-
-
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
