--- a/admin/pages/leader_portfoie/create_leaders/mla_create_page.html
+++ b/admin/pages/leader_portfoie/create_leaders/mla_create_page.html
@@ -8,7 +8,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="../../../assets/css/admin.css">
 
-
     <style>
         /* Style for the form container */
         #container {
@@ -121,7 +120,6 @@
 
 <body>
 
-
     <!-- Dashboard -->
     <div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary" id="nave_side">
         <!-- Vertical Navbar -->
@@ -190,17 +188,13 @@
                                 <h3>Insert MLA ditails</h3>
                                 <div class="maindiv">
 
-
                                     <div class="left">
                                         <label for="politics_radio">Tamil name</label>
                                         <input type="text" id="tname" value="name" placeholder="Tamil Name" required
-                                            pattern="[\u0B80-\u0BFF]+" />
-
-
+                                            pattern="[\u0B80-\u0BFF]+">
 
                                         <label for="politics_radio">English name</label>
-                                        <input type="text" id="ename" placeholder="English Name" required />
-
+                                        <input type="text" id="ename" placeholder="English Name" required>
 
                                         <label for="politics_radio">Image URL</label>
                                         <input type="text" id="url" placeholder="Please insert your picture URL"
@@ -209,7 +203,7 @@
                                         <div class="col-sm-6">
                                             Position:
                                             <select class="form-select" aria-label="Default select example"
-                                                id="position" required pattern="[A-Za-z]" required>
+                                                id="position" pattern="[A-Za-z]" required>
                                                 <option selected>Enter your opinion</option>
                                                 <option value="சட்டமன்ற உறுப்பினர்">சட்டமன்ற உறுப்பினர்</option>
 
@@ -217,25 +211,21 @@
                                         </div>
 
                                         <label for="politics_radio">Votes</label>
-                                        <input type="text" id="votes" placeholder="English Name" required />
-
-
-
+                                        <input type="text" id="votes" placeholder="English Name" required>
 
                                         <div>
                                             <label for="movie_radio" id="movie">Movie</label>
 
                                             <input type="radio" name="desc_radio" id="movie_radio" value="movie"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description" cols="90" rows="7" style="display:none;"
                                                 required pattern="[\u0B80-\u0BFF]+"></textarea>
                                         </div>
 
-
                                         <div>
                                             <label for="politics_radio">Politics</label>
                                             <input type="radio" name="desc_radio" id="politics_radio" value="politics"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <div>
                                                 <textarea name="" id="description1" cols="90" rows="7"
                                                     style="display:none;" required
@@ -244,11 +234,10 @@
 
                                         </div>
 
-
                                         <div>
                                             <label for="income_radio">Income</label>
                                             <input type="radio" name="desc_radio" id="income_radio" value="income"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description2" cols="90" rows="7" style="display:none;"
                                                 required pattern="[\u0B80-\u0BFF]+"></textarea>
                                         </div>
@@ -257,10 +246,8 @@
 
                                         <label for="politics_radio">Role</label>
 
-
                                         <input type="text" id="role" placeholder="role" required
                                             pattern="[\u0B80-\u0BFF]+">
-
 
                                         <label for="politics_radio">Party name</label>
                                         <input type="text" id="party_name" placeholder="Party Name"
@@ -274,14 +261,12 @@
                                         <input type="number" id="experiance" placeholder="experiance" required>
 
                                         <label for="politics_radio">Margin</label>
-                                        <input type="text" id="margin" placeholder="English Name" required />
-
-
+                                        <input type="text" id="margin" placeholder="English Name" required>
 
                                         <div>
                                             <label for="birth_radio">Birth</label>
                                             <input type="radio" name="desc_radio" id="birth_radio" value="birth"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
 
                                             <textarea name="" id="description3" cols="90" rows="7" style="display:none;"
                                                 required></textarea>
@@ -289,17 +274,15 @@
                                         <div>
                                             <label for="education_radio">Education</label>
                                             <input type="radio" name="desc_radio" id="education_radio" value="education"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description4" cols="90" rows="7"
                                                 style="display:none;"></textarea>
                                         </div>
 
-
-
                                         <div>
                                             <label for="family_radio">Family</label>
                                             <input type="radio" name="desc_radio" id="family_radio" value="family"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description5" cols="90" rows="7"
                                                 style="display:none;"></textarea>
                                         </div>
@@ -309,14 +292,11 @@
                                 <label for="politics_radio">constituency Name
                                 </label>
                                 <input type="text" id="constituency_Name" value="name" placeholder="constituency Name"
-                                    required pattern="[\u0B80-\u0BFF]+" />
-
+                                    required pattern="[\u0B80-\u0BFF]+">
 
                                 <button type="submit" id="submit_button">Submit</button>
 
-
                             </form>
-
 
                         </div>
                     </div>
@@ -325,11 +305,9 @@
         </div>
     </div>
 
-    <script>
-
-        function showDescription() {
+    <script>    function showDescription() {
             const radios = document.getElementsByName("desc_radio");
-            let descriptions = document.querySelectorAll("textarea[id^='description']");
+            const descriptions = document.querySelectorAll("textarea[id^='description']");
 
             for (let i = 0; i < radios.length; i++) {
                 if (radios[i].checked) {
@@ -341,7 +319,6 @@
             }
         }
     </script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
