--- a/admin/pages/manifesto/manifesto_create.html
+++ b/admin/pages/manifesto/manifesto_create.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -46,8 +47,6 @@
 
         }
 
-       
-
         option {
             padding: 20px 30px;
             font-family: tenso;
@@ -56,7 +55,6 @@
         .dropdown {
             margin: 40px 20px;
         }
-
 
         input {
             margin: 10px 0 40px 0;
@@ -82,7 +80,6 @@
             transition: background 0.3s;
             -webkit-transition: background 0.3s;
         }
-
 
         .close-what {
             color: #586790;
@@ -115,7 +112,6 @@
     </style>
 </head>
 
-
 <body>
     <div class="container">
         <h1>This is an Manifesto create page</h1>
@@ -124,7 +120,7 @@
             <div class="col-sm-6">
                 <form id="manifesto_form">
                     Title of Menifesto:<br>
-                    <input type="text" id="manifesto_title" placeholder="Title of Menifesto" required >
+                    <input type="text" id="manifesto_title" placeholder="Title of Menifesto" required>
             </div>
             <div class="col-sm-6">
                 stage of Menifesto:<br>
@@ -134,7 +130,8 @@
         <div class="row">
             <div class="col-sm-6">
                 category:
-                <select class="form-select" aria-label="Default select example" id="category" required pattern="[A-Za-z]">
+                <select class="form-select" aria-label="Default select example" id="category" required
+                    pattern="[A-Za-z]">
                     <option selected>Enter your opinion</option>
                     <option value="aggriculture">aggriculture</option>
                     <option value="water">water</option>
@@ -151,15 +148,21 @@
             </div>
             <div class="col-sm-6">
                 status:
-                <select class="form-select" aria-label="Default select example" id="manifesto-status" required pattern="[A-Za-z]">
+                <select class="form-select" aria-label="Default select example" id="manifesto-status" required
+                    pattern="[A-Za-z]">
                     <option selected>Enter your opinion</option>
                     <option value="complete">complte</option>
                     <option value="bending">bending</option>
-                </select><br><br><br><br><br>
+                </select>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
             </div>
         </div>
         <div class="row">
-         
+
             <div class="col-sm-6">
                 <input type="submit" value="Submit" class="submit">
 
