--- a/admin/pages/manifesto/manifesto_listpage.html
+++ b/admin/pages/manifesto/manifesto_listpage.html
@@ -144,7 +144,6 @@
             -webkit-transition: background 0.3s;
         }
 
-
         .close-what {
             color: #586790;
             font-size: 50px;
@@ -201,7 +200,6 @@
 
 <body>
 
-
     <div class="container">
 
         <!-- <div id="accordion-1">
@@ -220,7 +218,6 @@
     <div class="container popup" id="menifesto_popup" style="display: none;">
         <h1>This is an Menifesto create page</h1>
         <div class="popup-content">
-
 
             <div class="row">
                 <div class="col-sm-6">
@@ -263,7 +260,12 @@
 
                         <option value="bending">bending</option>
 
-                    </select><br><br><br><br><br>
+                    </select>
+<br>
+<br>
+<br>
+<br>
+<br>
 
                 </div>
 
