--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         rel="stylesheet">
     <link rel="stylesheet" href="assets/css/footer.css">
 
-
     <style>
         .image_container {
             display: flex;
@@ -130,9 +129,7 @@
 
 </head>
 
-
 <body>
-
 
     <!-- background vidieo -->
 
@@ -140,20 +137,16 @@
 
         <video autoplay muted loop id="myVideo">
 
-
             <source src="../../assets/images/essecial/Flag - 117755.mp4" type="video/mp4">
             <track default>
         </video>
-
 
     </div>
 
     <!-- navbar all -->
     <!-- section1 -->
 
-
     <div class="section1 container">
-
 
         <h1 class="h1 fs-3 fw-bolder text-center lh-base p-5">
             சுதந்திரமாக வாழ்வது மனிதனின் உரிமை. <br>அதுபோலவே மற்றவர்களைச் சார்ந்து வாழ்வது அவன் கடமை.
@@ -166,8 +159,8 @@
             அந்த நிலையை நிலைநிறுத்த அர்ப்பணிக்கப்பட்ட அந்தஸ்து கட்சி.
         </p>
 
-
-        <button type="button" class="btn btn-outline-dark "><a class="text-center text-decoration-none"
+        <button type="button" class="btn btn-outline-dark ">
+<a class="text-center text-decoration-none"
                 href="../your opinion/your opnion.html">தங்களது கருத்து</a></button>
 
     </div>
@@ -230,34 +223,34 @@
 
     </div>
 
-
-
     <!-- section3 -->
-
 
     <div class="section3">
 
-
         <div class="content d-flex flex-column justify-content-center align-items-center p-5">
 
-            <p class="h4 fs-5 text-center text-danger fw-bolder lh-base">எங்கள் பிரச்சாரம் இயக்கப்படுகிறது<br>
+            <p class="h4 fs-5 text-center text-danger fw-bolder lh-base">
+எங்கள் பிரச்சாரம் இயக்கப்படுகிறது<br>
                 உங்களைப் போன்ற ஆதரவாளர்களின் பங்களிப்புகளால்
             </p>
 
             <hr>
 
-            <h1 class="h2 fs-4 text-center text-dark fw-bold pb-5"><span>ஒரு தன்னார்வலராக</span> மாறுங்கள்</h1>
+            <h1 class="h2 fs-4 text-center text-dark fw-bold pb-5">
+<span>ஒரு தன்னார்வலராக</span> மாறுங்கள்
+</h1>
 
-            <h2 class="h2 fs-6 text-center text-dark lh-base pb-3">நீங்கள் அரசியலில் ஆர்வம் காட்டவில்லை என்பதற்காக<br>
+            <h2 class="h2 fs-6 text-center text-dark lh-base pb-3">
+நீங்கள் அரசியலில் ஆர்வம் காட்டவில்லை என்பதற்காக<br>
                 நீங்கள் அரசாங்கத்தை மாற்ற விரும்புகிறீர்கள்
                 என்று
                 அர்த்தமல்ல.
             </h2>
-            <button type="button" class="btn btn-outline-dark p-2 "><a class="text-center text-decoration-none"
+            <button type="button" class="btn btn-outline-dark p-2 ">
+<a class="text-center text-decoration-none"
                     href="../../index.html">இப்போது சேரவும்</a></button>
 
         </div>
-
 
         <!-- section4 -->
 
@@ -284,7 +277,6 @@
 
             <hr class="project border border-danger border-2 opacity-50">
 
-
             <div class="project num1">
                 <h1 class="h1 fs-1 text-center pb-3">2</h1>
                 <p class="text-center text-uppercase">
@@ -294,7 +286,6 @@
         </div>
 
     </div>
-
 
     <!-- section5 -->
 
@@ -306,7 +297,6 @@
 
             <div class="news1">
 
-
                 <img src="../../assets/images/ministers/news3.jpg" class="img-fluid" alt="error image">
                 <h2>அரசியல்</h2>
                 <p>
@@ -315,7 +305,6 @@
                     எழுப்பியுள்ளார். வாரிசு அரசியல் பற்றிப் பேச பாஜக மாநிலத் தலைவர் அண்ணாமலைக்கு தகுதியே இல்லை,
                     அவரது கட்சியிலேயே பலரது வாரிசுகள் பொறுப்புகளில் இருக்கிறார்கள் என துரை வைகோ தெரிவித்துள்ளார்.
                 </p>
-
 
             </div>
 
@@ -339,9 +328,7 @@
         </div>
     </div>
 
-
     <!-- footer  section-->
-
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -349,7 +336,6 @@
     <script src="main.js"></script>
 
     <!-- <script src="assets/javascript/translate.js"></script> -->
-
 
     <!-- <script type="text/javascript">
         function googleTranslateElementInit() {
@@ -362,13 +348,6 @@
 
     <!-- <script type="text/javascript"
         src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
-    <script>
-
-        
-
-
-
-    </script>
 
 </body>
 
