--- a/pages/more/Governer list.html
+++ b/pages/more/Governer list.html
@@ -13,18 +13,16 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-</head>
+    <link rel="stylesheet" href="../../assets/css/footer.css">
 
+</head>
 
 <body>
     <!-- navbar all -->
 
-
     <!-- governer list -->
-
 
     <div id="governer-list" class="governer">
         <h1>தமிழ்நாடு ஆளுநர்களின் பட்டியல்
@@ -42,7 +40,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro ">
@@ -55,7 +52,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/ravi-gover.jpg" alt="error image">
-
 
                                 <button><a href="governer-profile/governer-ravi.html">விவரம்</a></button>
 
@@ -73,7 +69,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -86,7 +81,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/pannish-gover.jpg" alt="error image">
-
 
                                 <button><a href="governer-profile/பன்வாரிலால்.html">விவரம்</a></button>
 
@@ -104,7 +98,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -117,7 +110,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/rav-gover.jpg" alt="error image">
-
 
                                 <button><a href="governer-profile/vithyasagar.html">விவரம்</a></button>
 
@@ -135,7 +127,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -148,7 +139,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/konirosaiya-gover.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -166,7 +156,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -179,7 +168,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/sigh-governer.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -197,7 +185,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -210,7 +197,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -228,7 +214,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -241,7 +226,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -259,7 +243,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -272,7 +255,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -291,7 +273,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -304,7 +285,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -322,7 +302,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -335,7 +314,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -353,7 +331,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -366,7 +343,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -384,7 +360,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -397,7 +372,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -415,7 +389,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -428,7 +401,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -446,7 +418,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -459,7 +430,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -477,7 +447,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -490,7 +459,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -508,7 +476,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -521,7 +488,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -539,7 +505,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -552,7 +517,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -570,7 +534,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -583,7 +546,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -601,7 +563,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -614,7 +575,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -632,7 +592,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -645,7 +604,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -663,11 +621,9 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
-
 
                                 <p>சர்தார் உஜ்ஜைல் சிங்</p>
                                 <p>ஆளுநர்</p>
@@ -677,7 +633,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -695,7 +650,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -708,7 +662,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -726,7 +679,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -739,7 +691,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -757,7 +708,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -770,7 +720,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -788,7 +737,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -801,7 +749,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -819,7 +766,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -832,7 +778,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -850,7 +795,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -863,7 +807,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -881,7 +824,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -894,7 +836,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -912,7 +853,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -925,7 +865,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -943,7 +882,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -956,7 +894,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -974,7 +911,6 @@
                 <td>
                     <div class="profile-main">
 
-
                         <div class="parties">
 
                             <div class="fontsidepro">
@@ -987,7 +923,6 @@
                             <div class="backsidepro">
                                 <p></p>
                                 <img src="../../assets/images/ministers/not-iamge.jpg" alt="error image">
-
 
                                 <button><a href="">விவரம்</a></button>
 
@@ -1003,16 +938,11 @@
         </table> -->
     </div>
 
-
     <!-- footer  section-->
-
 
 <script src="../../assets/javascript/governer_list.js"></script>
 
-
-
     <script src="../../main.js"></script>
-
 
     <!-- script for bootstrap -->
 
@@ -1021,7 +951,6 @@
     <!-- script for bootstrap -->
 
     <script src="../../assets/javascript/translate.js"></script>
-
 
 </body>
 
