--- a/pages/past leaders/past_leader_profile.html
+++ b/pages/past leaders/past_leader_profile.html
@@ -15,7 +15,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../../assets/css/leader_profile.css">
-
+  <link rel="stylesheet" href="../../assets/css/footer.css">
 
 </head>
 
@@ -34,18 +34,12 @@
     </div>
     <div class="content">
 
-
         <div class="headprofile">
 
         </div>
         <div class="cm-total-content">
 
-
-
-
-
         </div>
-
 
         <h1 class="cmd">Comment Section</h1>
         <ul id="comments-list"></ul>
@@ -53,23 +47,18 @@
             <!-- <label for="name">Name:</label>
             <input type="text" id="name" name="name"><br> -->
             <label for="comment">Comment:</label>
-            <textarea id="comment" required name="comment"></textarea><br>
+            <textarea id="comment" required name="comment"></textarea>
+<br>
             <input type="submit" id="submit_btn" value="Submit">
         </form>
 
-
-
-
     </div>
-
 
     <script src="../../main.js"></script>
 
     <script src="../../assets/javascript/past_leader_profile.js"></script>
 
-    <script>
-
-        function handleFormSubmit(event) {
+    <script>        function handleFormSubmit(event) {
             event.preventDefault();
 
             const users = JSON.parse(localStorage.getItem("users"));
@@ -95,8 +84,7 @@
                 ministerId,
             };
 
-
-            let comments = JSON.parse(localStorage.getItem("comments")) ?? [];
+            const comments = JSON.parse(localStorage.getItem("comments")) ?? [];
             comments.push(commentObject);
             localStorage.setItem("comments", JSON.stringify(comments));
 
@@ -108,10 +96,9 @@
             document.getElementById("comment-form").reset();
         }
 
-
         function displayComments(comments) {
 
-            let comments1 = JSON.parse(localStorage.getItem("comments")) ?? [];
+            const comments1 = JSON.parse(localStorage.getItem("comments")) ?? [];
 
             const minister = JSON.parse(localStorage.getItem("mla_ditails"))
 
@@ -124,7 +111,7 @@
 
             commentsList.innerHTML = "";
 
-            for (let comment of comments1) {
+            for (const comment of comments1) {
 
                 if (comment.ministerId === ministerId) {
 
@@ -137,31 +124,24 @@
 
         }
 
-
-
         document.getElementById('comment-form').addEventListener('submit', handleFormSubmit)
 
         window.onload = displayComments;
 
+        const submit_btn = document.getElementById("submit_btn");
 
-        let submit_btn = document.getElementById("submit_btn");
-
-        let loginEmail = localStorage.getItem("profile_email");
+        const loginEmail = localStorage.getItem("profile_email");
 
         if (loginEmail !== null) {
             submit_btn.style.display = "block"
         } else {
             submit_btn.style.display = "none"
         }
-
     </script>
-
 
     <!-- script for bootstrap -->
 
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
 
     <!-- script for bootstrap -->
 </body>
