--- a/pages/your opinion/profilepage.html
+++ b/pages/your opinion/profilepage.html
@@ -58,9 +58,12 @@
     <div class="container rounded bg-white mt-5">
         <div class="row">
             <div class="col-md-4 border-right">
-                <div class="img_div d-flex flex-column align-items-center text-center p-3 py-5"><img
+                <div class="img_div d-flex flex-column align-items-center text-center p-3 py-5">
+<img
                         src="../../assets/images/ministers/not-iamge.jpg" alt="user profile">
-                    <span class="font-weight-bold"></span><span class="text-black-50">23456789</span><span>United
+                    <span class="font-weight-bold"></span>
+<span class="text-black-50">23456789</span>
+<span>United
                         States</span>
                 </div>
             </div>
@@ -75,8 +78,11 @@
                                 options
                             </a>
                             <ul class="dropdown-menu bg-light">
-                                <li><button id="edit" class="dropdown-item">Edit Profile</button></li>
-                                <li><button id="delete" class="dropdown-item" type="">Delete
+                                <li>
+<button id="edit" class="dropdown-item">Edit Profile</button>
+</li>
+                                <li>
+<button id="delete" class="dropdown-item" type="">Delete
                                         Account</button></li>
 
                             </ul>
@@ -114,7 +120,6 @@
                                 <input type="email" class="form-control p-3" id="email" placeholder="Email" disabled>
 
                             </div>
-
                             
                             <div class="col-md-6">
 
@@ -150,8 +155,6 @@
                                 </select>
 
                             </div>
-
-
                             
                         </div>
                         <div class="row mt-3">
@@ -193,7 +196,6 @@
     <script src="../../assets/javascript/user_profile.js">    </script>
 
     <script src="../../main.js"></script>
-
 
     <!-- script for bootstrap -->
 
