--- a/pages/your opinion/your opnion.html
+++ b/pages/your opinion/your opnion.html
@@ -24,7 +24,6 @@
 
 </head>
 
-
 <body>
     <!-- navbar all -->
 
@@ -34,7 +33,7 @@
 
             <video autoplay muted loop id="myVideo">
                 <source src="../../assets/images/essecial/Pattern - 85590.mp4" type="video/mp4">
-                <track default />
+                <track default>
             </video>
 
         </div>
@@ -48,12 +47,20 @@
             </div>
 
             <div class="topic1">
-                <p class="contact"><a href="#">தொடர்பு</a></p>
+                <p class="contact">
+<a href="#">தொடர்பு</a>
+</p>
                 <p class="contact">|</p>
-                <p class="contact"><a href="#">பின்னூட்டம்</a></p>
-                <p><a href="../../English-version/portfolio/potfolio-english.html">English</a></p>
+                <p class="contact">
+<a href="#">பின்னூட்டம்</a>
+</p>
+                <p>
+<a href="../../English-version/portfolio/potfolio-english.html">English</a>
+</p>
                 <p>|</p>
-                <p><a href="potfolio.html">தமிழ்</a></p>
+                <p>
+<a href="potfolio.html">தமிழ்</a>
+</p>
             </div>
 
         </div>
@@ -62,12 +69,10 @@
 
         <nav class="navbar navbar-expand-lg">
 
-
             <div class="container-fluid">
 
-
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
 
@@ -94,8 +99,12 @@
                                 அறிக்கைகள்
                             </a>
                             <ul class="dropdown-menu bg-light">
-                                <li><a class="dropdown-item" href="../manifesto/bending.html">நிலுவை</a></li>
-                                <li><a class="dropdown-item" href="../manifesto/complte.html">நிறைவு</a></li>
+                                <li>
+<a class="dropdown-item" href="../manifesto/bending.html">நிலுவை</a>
+</li>
+                                <li>
+<a class="dropdown-item" href="../manifesto/complte.html">நிறைவு</a>
+</li>
                             </ul>
                         </li>
 
@@ -109,8 +118,12 @@
                                 மேலும்
                             </a>
                             <ul class="dropdown-menu bg-light">
-                                <li><a class="dropdown-item" href="../more/Governer list.html">ஆளுநர்கள்</a></li>
-                                <li><a class="dropdown-item" href="../more/mla.html">பிரதிநிதிகள்</a></li>
+                                <li>
+<a class="dropdown-item" href="../more/Governer list.html">ஆளுநர்கள்</a>
+</li>
+                                <li>
+<a class="dropdown-item" href="../more/mla.html">பிரதிநிதிகள்</a>
+</li>
 
                             </ul>
                         </li>
@@ -125,18 +138,15 @@
 
     </div>
 
-
     <!-- main page start1 -->
-
 
     <!-- start opinion quiestion answer page -->
 
-
     <div class="opinionpoll">
 
-
-        <form action=""><br><br>
-
+        <form action="">
+<br>
+<br>
 
             <label for=""> POLITICAL YOUR OPINION:</label></br>
 
@@ -155,17 +165,20 @@
 
             <label for="">
                 2.தேர்ந்தெடுக்கப்பட்ட அதிகாரியை தொடர்பு கொண்டீர்களா?:
-            </label><br>
+            </label>
+<br>
 
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">Yes</option>
                 <option value="2">No</option>
-            </select> <br>
+            </select>
+ <br>
 
             <label for="">
                 3.எந்த அரசியல் கட்சியை ஆதரிக்கிறீர்கள்?:
-            </label><br>
+            </label>
+<br>
 
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
@@ -173,12 +186,13 @@
                 <option value="2">AIADMK</option>
                 <option value="3">INC</option>
                 <option value="3">BJP</option>
-            </select> <br>
+            </select>
+ <br>
 
             <label for="">
                 4. தற்போதைய அரசாங்கம் உங்களுக்காக வேலை செய்யும் என்று நீங்கள் எவ்வளவு நம்புகிறீர்கள்?:
-            </label><br>
-
+            </label>
+<br>
 
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
@@ -187,78 +201,86 @@
                 <option value="3">50%</option>
                 <option value="3">25%</option>
                 <option value="3">0%</option>
-            </select><br>
-
+            </select>
+<br>
 
             <label for="">
                 5. இட ஒதுக்கீடு என்பது குறைந்த வருமானம் உள்ள குடும்பங்களுக்கு மட்டும் இருக்கக் கூடாது.
-            </label><br>
-
+            </label>
+<br>
 
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">Yes</option>
                 <option value="2">No</option>
-            </select><br>
+            </select>
+<br>
 
             <label for="">
                 6. நீங்கள் வாக்களிக்க பதிவு செய்துள்ளீர்களா?:
-            </label><br>
-
+            </label>
+<br>
 
             <select class="form-select" aria-label="Default select example" id="dropdown">
                 <option value="Enter Your opinion">Enter your opinion</option>
                 <option value="Yes">Yes</option>
                 <option value="No">No</option>
-            </select><br>
+            </select>
+<br>
 
             <label for="">
                 7. நீங்கள் மற்றவர்களுடன் அரசியலைப் பற்றி பேச வசதியாக இருக்கிறீர்களா?:
-            </label><br>
+            </label>
+<br>
 
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">Like</option>
                 <option value="2">Not Like</option>
-            </select><br>
+            </select>
+<br>
 
             <label for="">
                 8. அரசாங்கம் சரியானதைச் செய்யும் என்று நம்பலாமா?:
-            </label><br>
-
+            </label>
+<br>
 
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">Yes</option>
                 <option value="2">No</option>
-            </select><br>
+            </select>
+<br>
 
             <label for="">
                 9. அரசியல் பேரணி, பேச்சு அல்லது நிகழ்வில் கலந்துகொள்வதா?
-            </label><br>
+            </label>
+<br>
 
             <select class="form-select" aria-label="Default select example">
                 <option selected>Enter your opinion</option>
                 <option value="1">Yes</option>
                 <option value="2">No</option>
-            </select><br>
+            </select>
+<br>
 
             <label for="">
                 உங்கள் கருத்தைச் சேர்க்கவும்
-            </label><br>
+            </label>
+<br>
 
-            <input type="text" placeholder="Addition opinion"><br>
+            <input type="text" placeholder="Addition opinion">
+<br>
 
-            <button type="button" class="text-center btn btn-outline-success btn-lg"><a
+            <button type="button" class="text-center btn btn-outline-success btn-lg">
+<a
                     href="../../index.html">Submit</a></button>
 
         </form>
 
-
     </div>
 
     <!-- footer  section-->
-
 
     <div class="footer">
 
@@ -266,7 +288,6 @@
 
             <h1>அரசியல்</h1>
             <p>
-
 
                 வலி மிகவும் முக்கியமானது, நோயாளியின் வலிப்புத்தாக்கத்தின் விளைவு, ஆனால் அது உழைப்பு மற்றும் வலியை
                 ஏற்படுத்தும் ஒரு நேரத்தில் அதைச் செய்யட்டும்.
@@ -305,25 +326,22 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-
     <script>
-       let selection = document.querySelector("#percentage");
+       const selection = document.querySelector("#percentage");
 
        selection.addEventListener('change', () => {
 
-        let value_selected = selection.options[selection.selectedIndex].value;
+        const value_selected = selection.options[selection.selectedIndex].value;
 
         let value1="";
 
-         value1=value1+value_selected;
+         value1+=value_selected;
         document.querySelector(".balaji").append(value1);
 
        });
     </script>
-
 
 <!-- script for bootstrap -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -337,7 +355,6 @@ integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEUL
 crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- script for bootstrap -->
-
 
 </body>
 
