--- a/admin/pages/leader_portfoie/create_leaders/politicin_create.html
+++ b/admin/pages/leader_portfoie/create_leaders/politicin_create.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../assets/css/admin.css">
-
+    <link rel="stylesheet" href="../../../assets/css/admin.css">
 
     <style>
         /* Style for the form container */
@@ -121,7 +120,6 @@
 
 <body>
 
-
     <!-- Dashboard -->
     <div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary" id="nave_side">
         <!-- Vertical Navbar -->
@@ -191,17 +189,13 @@
                                 <h3>Insert your Data</h3>
                                 <div class="maindiv">
 
-
                                     <div class="left">
                                         <label for="politics_radio">Tamil name</label>
                                         <input type="text" id="tname" value="name" placeholder="Tamil Name" required
-                                            pattern="[\u0B80-\u0BFF]+" />
-
-
+                                            pattern="[\u0B80-\u0BFF]+">
 
                                         <label for="politics_radio">English name</label>
-                                        <input type="text" id="ename" placeholder="English Name" required />
-
+                                        <input type="text" id="ename" placeholder="English Name" required>
 
                                         <label for="politics_radio">Image URL</label>
                                         <input type="text" id="url" placeholder="Please insert your picture URL"
@@ -210,11 +204,10 @@
                                         <div class="col-sm-6">
                                             Position:
                                             <select class="form-select" aria-label="Default select example"
-                                                id="position" required pattern="[A-Za-z]" required>
+                                                id="position" pattern="[A-Za-z]" required>
                                                 <option selected>Enter your opinion</option>
                                                 <option value="முதல் அமைச்சர்">முதல் அமைச்சர்</option>
                                                 <option value="நாடாளுமன்ற உறுப்பினர்">நாடாளுமன்ற உறுப்பினர்</option>
-                                                
 
                                             </select>
                                         </div>
@@ -223,16 +216,15 @@
                                             <label for="movie_radio" id="movie">Movie</label>
 
                                             <input type="radio" name="desc_radio" id="movie_radio" value="movie"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description" cols="90" rows="7" style="display:none;"
                                                 required pattern="[\u0B80-\u0BFF]+"></textarea>
                                         </div>
 
-
                                         <div>
                                             <label for="politics_radio">Politics</label>
                                             <input type="radio" name="desc_radio" id="politics_radio" value="politics"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <div>
                                                 <textarea name="" id="description1" cols="90" rows="7"
                                                     style="display:none;" required
@@ -241,11 +233,10 @@
 
                                         </div>
 
-
                                         <div>
                                             <label for="income_radio">Income</label>
                                             <input type="radio" name="desc_radio" id="income_radio" value="income"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description2" cols="90" rows="7" style="display:none;"
                                                 required pattern="[\u0B80-\u0BFF]+"></textarea>
                                         </div>
@@ -254,10 +245,8 @@
 
                                         <label for="politics_radio">Role</label>
 
-
                                         <input type="text" id="role" placeholder="role" required
                                             pattern="[\u0B80-\u0BFF]+">
-
 
                                         <label for="politics_radio">Party name</label>
                                         <input type="text" id="party_name" placeholder="Party Name"
@@ -269,12 +258,10 @@
                                         <label for="politics_radio">Politics Experiance</label>
                                         <input type="number" id="experiance" placeholder="experiance" required>
 
-
-
                                         <div>
                                             <label for="birth_radio">Birth</label>
                                             <input type="radio" name="desc_radio" id="birth_radio" value="birth"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
 
                                             <textarea name="" id="description3" cols="90" rows="7" style="display:none;"
                                                 required></textarea>
@@ -282,17 +269,15 @@
                                         <div>
                                             <label for="education_radio">Education</label>
                                             <input type="radio" name="desc_radio" id="education_radio" value="education"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description4" cols="90" rows="7"
                                                 style="display:none;"></textarea>
                                         </div>
 
-
-
                                         <div>
                                             <label for="family_radio">Family</label>
                                             <input type="radio" name="desc_radio" id="family_radio" value="family"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description5" cols="90" rows="7"
                                                 style="display:none;"></textarea>
                                         </div>
@@ -300,12 +285,9 @@
                                     </div>
                                 </div>
 
-
                                 <button type="submit" id="submit_button">Submit</button>
 
-
                             </form>
-
 
                         </div>
                     </div>
@@ -317,7 +299,7 @@
     <script>
         function showDescription() {
             const radios = document.getElementsByName("desc_radio");
-            let descriptions = document.querySelectorAll("textarea[id^='description']");
+            const descriptions = document.querySelectorAll("textarea[id^='description']");
 
             for (let i = 0; i < radios.length; i++) {
                 if (radios[i].checked) {
@@ -333,7 +315,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="../../assets/js/leader_profile_create.js"></script>
-    <script src="../../admin_main.js"></script>
+    <script src="../../../admin_main.js"></script>
 </body>
 
 </html>
