--- a/admin/pages/leader_portfoie/past_leader.html
+++ b/admin/pages/leader_portfoie/past_leader.html
@@ -289,17 +289,13 @@
                                 <h3>Insert your Data</h3>
                                 <div class="maindiv">
 
-
                                     <div class="left">
                                         <label for="politics_radio">Tamil name</label>
                                         <input type="text" id="tname" value="name" placeholder="Tamil Name" required
-                                            pattern="[\u0B80-\u0BFF]+" />
-
-
+                                            pattern="[\u0B80-\u0BFF]+">
 
                                         <label for="politics_radio">English name</label>
-                                        <input type="text" id="ename" placeholder="English Name" required />
-
+                                        <input type="text" id="ename" placeholder="English Name" required>
 
                                         <label for="politics_radio">Image URL</label>
                                         <input type="text" id="url" placeholder="Please insert your picture URL"
@@ -308,14 +304,13 @@
                                         <div class="col-sm-6">
                                             Position:
                                             <select class="form-select" aria-label="Default select example"
-                                                id="position" required pattern="[A-Za-z]" required>
+                                                id="position" pattern="[A-Za-z]" required>
                                                 <option selected>Enter your opinion</option>
                                                 <option value="முன்னாள் முதல் அமைச்சர்">முன்னாள் முதல் அமைச்சர்</option>
 
                                             </select>
                                         </div>
                                         <div class="from_date" style="display:block;">
-
 
                                             <label for="">from_date</label>
 
@@ -327,16 +322,15 @@
                                             <label for="movie_radio" id="movie">life achievement</label>
 
                                             <input type="radio" name="desc_radio" id="movie_radio" value="movie"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description" cols="90" rows="7" style="display:none;"
                                                 required pattern="[\u0B80-\u0BFF]+"></textarea>
                                         </div>
 
-
                                         <div>
                                             <label for="politics_radio">Politics</label>
                                             <input type="radio" name="desc_radio" id="politics_radio" value="politics"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <div>
                                                 <textarea name="" id="description1" cols="90" rows="7"
                                                     style="display:none;" required
@@ -345,22 +339,20 @@
 
                                         </div>
 
-
                                         <div>
                                             <label for="income_radio">Income</label>
                                             <input type="radio" name="desc_radio" id="income_radio" value="income"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description2" cols="90" rows="7" style="display:none;"
                                                 required pattern="[\u0B80-\u0BFF]+"></textarea>
                                         </div>
                                     </div>
                                     <div class="right">
                                         <label for="politics_radio">constuency Name</label>
-                                        <input type="text" id="constuency_name" placeholder="contuency Nmae" required />
-
+                                        <input type="text" id="constuency_name" placeholder="contuency Nmae" required>
 
                                         <label for="politics_radio">How many times wining</label>
-                                        <input type="text" id="count_winning" placeholder="winning aount" required />
+                                        <input type="text" id="count_winning" placeholder="winning aount" required>
 
                                         <label for="politics_radio">Party name</label>
                                         <input type="text" id="party_name" placeholder="Party Name"
@@ -369,17 +361,15 @@
                                         <label for="politics_radio">Politics Experiance</label>
                                         <input type="number" id="experiance" placeholder="experiance" required>
 
-
                                         <div class="from_date" style="display:block;">
                                             <label for="">To_date</label>
                                             <input type="date" id="date_t" required>
                                         </div>
 
-
                                         <div>
                                             <label for="birth_radio">Birth</label>
                                             <input type="radio" name="desc_radio" id="birth_radio" value="birth"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
 
                                             <textarea name="" id="description3" cols="90" rows="7" style="display:none;"
                                                 required></textarea>
@@ -387,17 +377,15 @@
                                         <div>
                                             <label for="education_radio">Education</label>
                                             <input type="radio" name="desc_radio" id="education_radio" value="education"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description4" cols="90" rows="7"
                                                 style="display:none;"></textarea>
                                         </div>
 
-
-
                                         <div>
                                             <label for="family_radio">Family</label>
                                             <input type="radio" name="desc_radio" id="family_radio" value="family"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description5" cols="90" rows="7"
                                                 style="display:none;"></textarea>
                                         </div>
@@ -405,23 +393,16 @@
                                     </div>
                                 </div>
 
-
                                 <button type="submit" id="submit_button">Submit</button>
                                 <div class="close-what" id="closeBtn">&times;</div>
                             </form>
 
-
-
                         </div>
 
-
-
-
                         <script>
-
                             function showDescription() {
                                 const radios = document.getElementsByName("desc_radio");
-                                let descriptions = document.querySelectorAll("textarea[id^='description']");
+                                const descriptions = document.querySelectorAll("textarea[id^='description']");
 
                                 for (let i = 0; i < radios.length; i++) {
                                     if (radios[i].checked) {
@@ -440,7 +421,7 @@
         </div>
     </div>
     <script>
-        let past_leader = JSON.parse(localStorage.getItem("past_leader"));
+        const past_leader = JSON.parse(localStorage.getItem("past_leader"));
 
         function loadPast() {
 
@@ -448,7 +429,7 @@
 
             past_container.innerHTML = ""
 
-            for (let values of past_leader) {
+            for (const values of past_leader) {
 
                 // Create the table row element
                 const tr = document.createElement('tr');
@@ -542,7 +523,7 @@
 
         const closeBtn = document.getElementById("closeBtn");
 
-        closeBtn.addEventListener('click', function () {
+        closeBtn.addEventListener('click', () => {
             // leaderForm.style.display = 'none';
             table_content.style.display = 'flex'; // hide the form
             container_div.style.display = "none"
@@ -601,7 +582,6 @@
         function handleSubmit(e) {
             e.preventDefault();
 
-
             const img_url = document.getElementById("url").value;
 
             const tamil_name = document.getElementById("tname").value;
@@ -646,7 +626,6 @@
 
             const experiance = document.getElementById("experiance").value;
 
-
             const past_leader_up = {
                 name: {
                     tname: tamil_name,
@@ -656,7 +635,7 @@
                     source: img_url,
                     alter: english_name,
                 },
-                position: position,
+                position,
                 movie: {
                     name: movie,
                     description: movie_description
@@ -681,23 +660,22 @@
                     name: education,
                     description: education_description
                 },
-                party_name: party_name,
+                party_name,
 
                 status: true,
 
-                from_date: from_date,
+                from_date,
 
-                to_date: to_date,
+                to_date,
 
-                experiance: experiance,
+                experiance,
 
-                constuency_name: constuency_name,
+                constuency_name,
 
-                count_winning: count_winning,
+                count_winning,
 
                 id: profile_leder_id,
             };
-
 
             // Find index of current leader in ministersData
             const index = past_leader.findIndex((leader) => leader.id === profile_leder_id);
@@ -714,7 +692,6 @@
 
         // Add event listener to form submission
         leaderForm.addEventListener("submit", handleSubmit);
-
 
         function deleteLeader(minister) {
             const ministersData = JSON.parse(localStorage.getItem("past_leader")) ?? [];
@@ -735,12 +712,6 @@
         window.onload = function () {
             loadPast()
         }
-
-
-
-
-
-
     </script>
 
     <script src="../../admin_main.js"></script>
