--- a/admin/pages/leader_portfoie/profile_list_page.html
+++ b/admin/pages/leader_portfoie/profile_list_page.html
@@ -203,7 +203,6 @@
 
 <body>
 
-
     <!-- Dashboard -->
     <div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary" id="nave_side">
         <!-- Vertical Navbar -->
@@ -289,12 +288,11 @@
                                 <h3>Insert your Data</h3>
                                 <div class="maindiv">
 
-
                                     <div class="left">
                                         <label for="politics_radio">Tamil name</label>
-                                        <input type="text" id="tname" value="name" placeholder="Tamil Name" required />
+                                        <input type="text" id="tname" value="name" placeholder="Tamil Name" required>
                                         <label for="politics_radio">English name</label>
-                                        <input type="text" id="ename" placeholder="English Name" required />
+                                        <input type="text" id="ename" placeholder="English Name" required>
                                         <label for="politics_radio">Image URL</label>
                                         <input type="text" id="url" placeholder="Please insert your picture URL"
                                             required>
@@ -302,7 +300,7 @@
                                         <div class="col-sm-6">
                                             Position:
                                             <select class="form-select" aria-label="Default select example"
-                                                id="position" required pattern="[A-Za-z]" required>
+                                                id="position" pattern="[A-Za-z]" required>
                                                 <option selected>Enter your opinion</option>
                                                 <option value="முதல் அமைச்சர்">முதல் அமைச்சர்</option>
                                                 <option value="நாடாளுமன்ற உறுப்பினர்">நாடாளுமன்ற உறுப்பினர்</option>
@@ -313,16 +311,15 @@
                                             <label for="movie_radio" id="movie">past </label>
 
                                             <input type="radio" name="desc_radio" id="movie_radio" value="movie"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description" cols="90" rows="7" style="display:none;"
                                                 required></textarea>
                                         </div>
 
-
                                         <div>
                                             <label for="politics_radio">Politics</label>
                                             <input type="radio" name="desc_radio" id="politics_radio" value="politics"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <div>
                                                 <textarea name="" id="description1" cols="90" rows="7"
                                                     style="display:none;" required></textarea>
@@ -330,11 +327,10 @@
 
                                         </div>
 
-
                                         <div>
                                             <label for="income_radio">Income</label>
                                             <input type="radio" name="desc_radio" id="income_radio" value="income"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description2" cols="90" rows="7" style="display:none;"
                                                 required></textarea>
                                         </div>
@@ -350,12 +346,10 @@
                                         <label for="politics_radio">Politics Experiance</label>
                                         <input type="number" id="experiance" placeholder="experiance" required>
 
-
-
                                         <div>
                                             <label for="birth_radio">Birth</label>
                                             <input type="radio" name="desc_radio" id="birth_radio" value="birth"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
 
                                             <textarea name="" id="description3" cols="90" rows="7" style="display:none;"
                                                 required></textarea>
@@ -363,17 +357,15 @@
                                         <div>
                                             <label for="education_radio">Education</label>
                                             <input type="radio" name="desc_radio" id="education_radio" value="education"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description4" cols="90" rows="7"
                                                 style="display:none;"></textarea>
                                         </div>
 
-
-
                                         <div>
                                             <label for="family_radio">Family</label>
                                             <input type="radio" name="desc_radio" id="family_radio" value="family"
-                                                onclick="showDescription()" />
+                                                onclick="showDescription()">
                                             <textarea name="" id="description5" cols="90" rows="7"
                                                 style="display:none;"></textarea>
                                         </div>
@@ -381,24 +373,17 @@
                                     </div>
                                 </div>
 
-
                                 <button type="submit" id="submit_button">Submit</button>
-                                <input id="closeBtn" type="button" value="close">
+                                
                                 <div class="close-what" id="closeBtn">&times;</div>
 
                             </form>
 
-
                         </div>
 
-
-
-
-                        <script>
-
-                            function showDescription() {
+                        <script>                            function showDescription() {
                                 const radios = document.getElementsByName("desc_radio");
-                                let descriptions = document.querySelectorAll("textarea[id^='description']");
+                                const descriptions = document.querySelectorAll("textarea[id^='description']");
 
                                 for (let i = 0; i < radios.length; i++) {
                                     if (radios[i].checked) {
@@ -417,16 +402,15 @@
         </div>
     </div>
 
-
     <script>
-        let ministers_value = JSON.parse(localStorage.getItem("politician_data"));
+        const ministers_value = JSON.parse(localStorage.getItem("politician_data"));
 
         function loadMp() {
 
             const mp_container = document.getElementById("mp_container");
             mp_container.innerHTML = "";
 
-            for (let values of ministers_value) {
+            for (const values of ministers_value) {
 
                 // Create the table row element
                 const tr = document.createElement('tr');
@@ -521,7 +505,7 @@
 
         const closeBtn = document.getElementById("closeBtn");
 
-        closeBtn.addEventListener('click', function () {
+        closeBtn.addEventListener('click', () => {
             // leaderForm.style.display = 'none';
             table_content.style.display = 'flex'; // hide the form
             container_div.style.display = "none"
@@ -606,8 +590,6 @@
 
             const experiance = document.getElementById("experiance").value;
 
-
-
             const leaderdata = {
                 name: {
                     tname: tamil_name,
@@ -617,7 +599,7 @@
                     source: img_url,
                     alter: english_name,
                 },
-                position: position,
+                position,
                 movie: {
                     name: movie,
                     description: movie_description
@@ -642,17 +624,15 @@
                     name: education,
                     description: education_description
                 },
-                party_name: party_name,
+                party_name,
 
                 id: profile_leder_id,
 
                 status: true,
 
-                experiance: experiance,
-
+                experiance,
 
             };
-
 
             // Find index of current leader in ministersData
             const index = ministers_value.findIndex((leader) => leader.id === profile_leder_id);
@@ -670,7 +650,6 @@
         // Add event listener to form submission
         leaderForm.addEventListener("submit", handleSubmit);
 
-
         function deleteLeader(minister) {
 
             const index = ministers_value.findIndex((leader) => leader.name.ename === minister.name.ename);
@@ -684,12 +663,9 @@
             }
         }
 
-
        window.onload= function (){
         loadMp();
        }
-
-
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
