--- a/pages/like_list.html
+++ b/pages/like_list.html
@@ -2,15 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/css/main.css">
   <title>Document</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <link rel="stylesheet" href="../assets/css/footer.css">
   <style>
     html,
     body {
@@ -78,7 +80,6 @@
       margin: 7px 0px;
     }
 
-
     .card-title {
       font-weight: bold;
       font-size: 1.3em;
@@ -97,7 +98,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../main.js"></script>
-  <script src="../assets/javascript/translate.js"></script>
   <!-- script for bootstrap -->
 </body>
 
