--- a/pages/more/governer_profile.html
+++ b/pages/more/governer_profile.html
@@ -11,14 +11,13 @@
 
     <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg">
 
-
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="../../assets/css/leader_profile.css">
 
+    <link rel="stylesheet" href="../../assets/css/footer.css">
 
 </head>
 
@@ -37,23 +36,15 @@
     </div>
     <div class="content">
 
-
         <div class="headprofile">
 
         </div>
 
-
         <!-- cm content page  -->
-
 
         <div class="cm-total-content">
 
-
-
-
-
         </div>
-
 
         <h1 class="cmd">Comment Section</h1>
         <ul id="comments-list"></ul>
@@ -61,23 +52,18 @@
             <!-- <label for="name">Name:</label>
             <input type="text" id="name" name="name"><br> -->
             <label for="comment">Comment:</label>
-            <textarea id="comment" required name="comment"></textarea><br>
+            <textarea id="comment" required name="comment"></textarea>
+<br>
             <input type="submit" id="submit_btn" value="Submit">
         </form>
 
-
-
-
     </div>
-
 
     <script src="../../main.js"></script>
 
     <script src="../../assets/javascript/governer_profile.js"></script>
 
-    <script>
-
-        function handleFormSubmit(event) {
+    <script>        function handleFormSubmit(event) {
             event.preventDefault();
 
             const users = JSON.parse(localStorage.getItem("users"));
@@ -103,23 +89,21 @@
                 ministerId,
             };
 
-
-            let comments = JSON.parse(localStorage.getItem("comments")) ?? [];
+            const comments = JSON.parse(localStorage.getItem("comments")) ?? [];
             comments.push(commentObject);
             localStorage.setItem("comments", JSON.stringify(comments));
 
             const filteredComments = comments.filter(
-                comment => comment.ministerId === ministerId
+                comment_id => comment_id.ministerId === ministerId
             );
             displayComments(filteredComments)
 
             document.getElementById("comment-form").reset();
         }
 
+        function displayComments() {
 
-        function displayComments(comments) {
-
-            let comments1 = JSON.parse(localStorage.getItem("comments")) ?? [];
+            const comments1 = JSON.parse(localStorage.getItem("comments")) ?? [];
 
             const minister = JSON.parse(localStorage.getItem("mla_ditails"))
 
@@ -132,7 +116,7 @@
 
             commentsList.innerHTML = "";
 
-            for (let comment of comments1) {
+            comments1.array.forEach(comment => {
 
                 if (comment.ministerId === ministerId) {
 
@@ -141,35 +125,28 @@
                     li.innerHTML = `<strong>${comment.user_id}</strong> said on ${date}:<br>${comment.comment}`;
                     commentsList.appendChild(li);
                 }
-            }
+            });
 
         }
-
-
 
         document.getElementById('comment-form').addEventListener('submit', handleFormSubmit)
 
         window.onload = displayComments;
 
+        const submit_btn = document.getElementById("submit_btn");
 
-        let submit_btn = document.getElementById("submit_btn");
-
-        let loginEmail = localStorage.getItem("profile_email");
+        const loginEmail = localStorage.getItem("profile_email");
 
         if (loginEmail !== null) {
             submit_btn.style.display = "block"
         } else {
             submit_btn.style.display = "none"
         }
-
     </script>
-
 
     <!-- script for bootstrap -->
 
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
 
     <!-- script for bootstrap -->
 </body>
