--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../assets/css/footer.css">
     <style>
         .mla-list-intro {
             display: flex;
@@ -46,30 +47,28 @@
 
 </head>
 
-
 <body>
     <!-- navbar all -->
-
 
     <!-- mla page -->
     <!-- <div id="google_translate_element"></div> -->
 
-
-
-
     <div class="mla-list-intro">
         <div>
-            <p><strong>பிரதிநிதிகள்:</strong></p>
+            <p>
+                <strong>பிரதிநிதிகள்:</strong>
+            </p>
             <p>தமிழ்நாடு சட்டசபையில் 234 தொகுதிகள் உள்ளன. கடைசியாக தமிழ்நாடு சட்டசபைக்கு எம்எல்ஏக்கள் தேர்வு
                 செய்யப்பட்டது மே 2021. திமுக வென்ற தொகுதிகள் 125, அதிமுக வென்ற தொகுதிகள் 65 இடங்கள், மற்றவர்கள் வென்றது
                 44 தொகுதிகள். தமிழ்நாடு சட்டசபைத் தேர்தலில் ஒவ்வொரு கட்சியிலிருந்தும் வென்றவர்களின் விரிவான பட்டியல்.
             </p>
         </div>
         <div>
-            <p>If you don't know your constituency you can take your voter id from the backside Assembly constituency NO
-                & Name you can search that number in the input field which shows your constituency. <img
-                    src="../../assets/images/essecial/IMG_20230427_140143.jpg" style="width: 400px; height: 100px;"
-                    alt=""></p>
+            <p>
+                உங்கள் தொகுதி உங்களுக்குத் தெரியாவிட்டால், உங்கள் வாக்காளர் அடையாள அட்டையின் பின்புறம் உள்ள சட்டமன்றத்
+                தொகுதி எண் & பெயரைப் பயன்படுத்தி உங்கள் தொகுதியைக் காட்டும் உள்ளீட்டு புலத்தில் அந்த எண்ணைத்
+                தேடலாம்.<img src="../../assets/images/essecial/IMG_20230427_140143.jpg"
+                    style="width: 400px; height: 100px;" alt=""></p>
         </div>
     </div>
 
@@ -105,7 +104,6 @@
 
             <tbody class="mla_list_body">
 
-
             </tbody>
 
         </table>
@@ -124,7 +122,6 @@
                     <th class="text-center">வாக்குகள்</th>
                     <th class="text-center">வாக்கு வித்தியாசம்</th>
                     <th class="text-center">வாக்கு விகிதம் %</th>
-
                
                 </tr>
 
@@ -3464,21 +3461,15 @@
 
         </table> -->
 
-
-        <!-- <span>View</span> Details <button id="first"> Toggle</button> -->
+    <!-- <span>View</span> Details <button id="first"> Toggle</button> -->
     </div> -->
-   
 
     <a href="mla_profile.html"></a>
     <!-- footer  section-->
 
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-
     <script src="../../main.js"></script>
-
 
     <script src="../../assets/javascript/mla_list.js"></script>
 
