--- a/pages/more/mla_profile.html
+++ b/pages/more/mla_profile.html
@@ -15,6 +15,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="../../assets/css/footer.css">
+
     <style>
         * {
             margin: 0;
@@ -23,14 +25,11 @@
             font-family: 'Poppins', sans-serif;
         }
 
-
-
         .wrapper {
             height: 100%;
             width: 300px;
             position: relative;
         }
-
 
         .wrapper .menu-btn i {
             position: absolute;
@@ -47,7 +46,6 @@
             opacity: 1;
             transform: rotate(-180deg);
         }
-
 
         #sidebar {
             position: fixed;
@@ -164,7 +162,6 @@
             list-style: none;
             padding: 0;
 
-
         }
 
         #comments-list li {
@@ -187,7 +184,6 @@
             border-color: transparent #c0e5f6 transparent transparent;
             transform: translateY(-50%);
         }
-
 
         #comments-list li .comment-header {
             display: flex;
@@ -212,8 +208,6 @@
             margin-top: 5px;
             color: #333;
         }
-
-
 
         #comment-form {
             margin-top: 20px;
@@ -329,7 +323,6 @@
         }
     </style>
 
-
 </head>
 
 <body>
@@ -346,7 +339,6 @@
         </nav>
     </div>
     <div class="content">
-
 
         <div class="headprofile">
 
@@ -365,18 +357,11 @@
             </div>
         </div> -->
 
-
         <!-- cm content page  -->
-
 
         <div class="cm-total-content">
 
-
-
-
-
         </div>
-
 
         <h1 class="cmd">Comment Section</h1>
         <ul id="comments-list"></ul>
@@ -384,23 +369,18 @@
             <!-- <label for="name">Name:</label>
             <input type="text" id="name" name="name"><br> -->
             <label for="comment">Comment:</label>
-            <textarea id="comment" required name="comment"></textarea><br>
+            <textarea id="comment" required name="comment"></textarea>
+<br>
             <input type="submit" id="submit_btn" value="Submit">
         </form>
 
-
-
-
     </div>
-
 
     <script src="../../main.js"></script>
 
     <script src="../../assets/javascript/mla_profile.js"></script>
 
-    <script>
-
-        function handleFormSubmit(event) {
+    <script>        function handleFormSubmit(event) {
             event.preventDefault();
 
             const users = JSON.parse(localStorage.getItem("users"));
@@ -426,23 +406,21 @@
                 ministerId,
             };
 
-
-            let comments = JSON.parse(localStorage.getItem("comments")) ?? [];
+            const comments = JSON.parse(localStorage.getItem("comments")) ?? [];
             comments.push(commentObject);
             localStorage.setItem("comments", JSON.stringify(comments));
 
             const filteredComments = comments.filter(
-                comment => comment.ministerId === ministerId
+                comment_id => comment_id.ministerId === ministerId
             );
             displayComments(filteredComments)
 
             document.getElementById("comment-form").reset();
         }
 
-
         function displayComments(comments) {
 
-            let comments1 = JSON.parse(localStorage.getItem("comments")) ?? [];
+            const comments1 = JSON.parse(localStorage.getItem("comments")) ?? [];
 
             const minister = JSON.parse(localStorage.getItem("mla_ditails"))
 
@@ -455,7 +433,7 @@
 
             commentsList.innerHTML = "";
 
-            for (let comment of comments1) {
+            for (const comment of comments1) {
 
                 if (comment.ministerId === ministerId) {
 
@@ -468,31 +446,24 @@
 
         }
 
-
-
         document.getElementById('comment-form').addEventListener('submit', handleFormSubmit)
 
         window.onload = displayComments;
 
+        const submit_btn = document.getElementById("submit_btn");
 
-        let submit_btn = document.getElementById("submit_btn");
-
-        let loginEmail = localStorage.getItem("profile_email");
+        const loginEmail = localStorage.getItem("profile_email");
 
         if (loginEmail !== null) {
             submit_btn.style.display = "block"
         } else {
             submit_btn.style.display = "none"
         }
-
     </script>
-
 
     <!-- script for bootstrap -->
 
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
 
     <!-- script for bootstrap -->
 </body>
