--- a/pages/portfolio/parties-profile.html
+++ b/pages/portfolio/parties-profile.html
@@ -14,39 +14,25 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
     
 </head>
 
-
 <body>
-
-
 
     <!-- navbar all -->
 
     <!-- start with politics party  -->
 
-
-
     <div class="totalparties">
-       
 
     </div>
 
-
-
     <!-- footer  section-->
 
-
-   
+    <script src="../../assets/javascript/parties_profile.js"></script>
 
     <script src="../../main.js"></script>
-
-
-    <script src="../../assets/javascript/parties_profile.js"></script>
 
     <!-- script for bootstrap -->
    
@@ -54,9 +40,12 @@
 
    <!-- script for bootstrap -->
 
+   <!-- <script src="../../assets/javascript/translate.js"></script> -->
 
+   <script>    // const language_setting= localStorage.getItem("language");
 
-
+    // console.log(language_setting);
+   </script>
 
 </body>
 
