--- a/pages/portfolio/portfolio.html
+++ b/pages/portfolio/portfolio.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="../../assets/css/footer.css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="../../assets/css/footer.css" rel="stylesheet">
   
-  <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg" />
+  <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg">
 
   <title>portfolieo</title>
 
@@ -16,7 +16,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="../../assets/css/portfolio.css">
-
+  <link rel="stylesheet" href="../../assets/css/footer.css">
 
 </head>
 
@@ -52,27 +52,17 @@
 
   </div> -->
 
-
 </div>
 
-
-
-
+  <script src="../../assets/javascript/portfolieo.js"></script>
 
   <script src="../../main.js"></script>
-
-
-
-  <script src="../../assets/javascript/portfolieo.js"></script>
 
   <!-- script for bootstrap -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- script for bootstrap -->
   <script src="../../assets/javascript/translate.js"></script>
-
-
-
 
 </body>
 
