--- a/pages/your opinion/join now thank.html
+++ b/pages/your opinion/join now thank.html
@@ -24,7 +24,6 @@
 
 </head>
 
-
 <body>
   <!-- navbar all -->
 
@@ -33,7 +32,7 @@
     <div class="headvideo1">
       <video autoplay muted loop id="myVideo">
         <source src="../../assets/images/essecial/Pattern - 85590.mp4" type="video/mp4">
-        <track default />
+        <track default>
       </video>
     </div>
 
@@ -46,12 +45,20 @@
       </div>
 
       <div class="topic1">
-        <p class="contact"><a href="#">தொடர்பு</a></p>
+        <p class="contact">
+<a href="#">தொடர்பு</a>
+</p>
         <p class="contact">|</p>
-        <p class="contact"><a href="#">பின்னூட்டம்</a></p>
-        <p><a href="../../English-version/portfolio/potfolio-english.html">English</a></p>
+        <p class="contact">
+<a href="#">பின்னூட்டம்</a>
+</p>
+        <p>
+<a href="../../English-version/portfolio/potfolio-english.html">English</a>
+</p>
         <p>|</p>
-        <p><a href="potfolio.html">தமிழ்</a></p>
+        <p>
+<a href="potfolio.html">தமிழ்</a>
+</p>
       </div>
 
     </div>
@@ -60,37 +67,29 @@
 
     <nav class="navbar navbar-expand-lg">
 
-
       <div class="container-fluid">
 
-
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
-
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
 
             <li class="nav-item pe-5">
               <a class="nav-link active" aria-current="page" href="../../index.html">முகப்பு</a>
             </li>
 
-
             <li class="nav-item pe-5">
               <a class="nav-link" href="../portfolio/parties-profile.html">விவரம்</a>
             </li>
-
 
             <li class="nav-item dropdown pe-5">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -98,16 +97,18 @@
                 அறிக்கைகள்
               </a>
               <ul class="dropdown-menu bg-light">
-                <li><a class="dropdown-item" href="../manifesto/bending.html">நிலுவை</a></li>
-                <li><a class="dropdown-item" href="../manifesto/complte.html">நிறைவு</a></li>
+                <li>
+<a class="dropdown-item" href="../manifesto/bending.html">நிலுவை</a>
+</li>
+                <li>
+<a class="dropdown-item" href="../manifesto/complte.html">நிறைவு</a>
+</li>
               </ul>
             </li>
-
 
             <li class="nav-item pe-5">
               <a class="nav-link" href="../passt leaders/past leaders.html">தலைவர்கள்</a>
             </li>
-
 
             <li class="nav-item dropdown pe-5">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -115,32 +116,30 @@
                 மேலும்
               </a>
               <ul class="dropdown-menu bg-light">
-                <li><a class="dropdown-item" href="../more/Governer list.html">ஆளுநர்கள்</a></li>
-                <li><a class="dropdown-item" href="../more/mla.html">பிரதிநிதிகள்</a></li>
+                <li>
+<a class="dropdown-item" href="../more/Governer list.html">ஆளுநர்கள்</a>
+</li>
+                <li>
+<a class="dropdown-item" href="../more/mla.html">பிரதிநிதிகள்</a>
+</li>
 
               </ul>
 
             </li>
 
-
           </ul>
-
 
         </div>
 
-
       </div>
 
-
     </nav>
-
 
   </div>
 
   <!-- start thanks page -->
 
   <div class="thanks">
-
 
     <h1>Thank You</h1>
 
@@ -151,19 +150,19 @@
     <div class="record">
 
       <img src="../../assets/images/icons/letter.png" width="60px" height="60px" alt=" error image">
-      <p>An email recept incukding the detais about your join has been sent to your email address <br>provided. Please
+      <p>
+An email recept incukding the detais about your join has been sent to your email address <br>provided. Please
         keep it for your records</p>
 
     </div>
 
-    <button><a href="../../index.html">Continue</a></button>
-
+    <button>
+<a href="../../index.html">Continue</a>
+</button>
 
   </div>
 
-
   <!-- footer  section-->
-
 
   <div class="footer">
 
@@ -171,7 +170,6 @@
 
       <h1>அரசியல்</h1>
       <p>
-
 
         வலி மிகவும் முக்கியமானது, நோயாளியின் வலிப்புத்தாக்கத்தின் விளைவு, ஆனால் அது உழைப்பு மற்றும் வலியை
         ஏற்படுத்தும் ஒரு நேரத்தில் அதைச் செய்யட்டும்.
@@ -210,9 +208,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
 
 </body>
 
